update routes back and front